задачи, состояния, маршруты

--- a/escom-bpm-web/src/main/webapp/view/docs/doc-places.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-places.xhtml
@@ -2,8 +2,8 @@
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui">
 
-    <p:tab title="#{bundle.PlacesDocStorage}" >
-        <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12" >
+    <p:tab title="#{bundle.PlacesDocStorage}" rendered="#{applicationBean.canUsesDelo}">
+        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12" >
             <p:outputLabel value="#{bundle.Folder}:" />
             <p:inputText value="#{_bean.editedItem.path}" readonly="true" styleClass="ui-grid-col-12"/>            
         </p:panelGrid>
