--- a/escom-bpm-web/src/main/webapp/view/docs/doc-links.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-links.xhtml
@@ -4,7 +4,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <p:tab title="#{bundle.Links}" >        
+    <p:tab title="#{bundle.Links}" rendered="#{applicationBean.canUsesDelo}">        
         <p:commandButton id="openDocBtn" actionListener="#{docBean.prepEditItem(_bean.linkedDoc)}"
                          onstart="PF('statusDialog').show()"
                          oncomplete="PF('statusDialog').hide();"
@@ -12,7 +12,7 @@
             <p:ajax event="dialogReturn" listener="#{_bean.onUpdateLinkedDocs()}" update="mainFRM:mainTabView:tblLinkedDocs"/>
         </p:commandButton>
 
-        <p:panelGrid id="panelLinkedDocs" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
+        <p:panelGrid id="panelLinkedDocs" columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
             <p:outputLabel value="#{bundle.MainDoc}:" />
             <ui:include src="/view/common/item-select-btn.xhtml" >
                 <ui:param name="_itemValue" value="#{_bean.editedItem.mainDoc}"/>
