--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -144,9 +144,14 @@
                                          itemLabel="#{bundle.EnterInApprovalSheet}" 
                                          rendered="#{taskCardBean.editedItem.scheme != null}"
                                          disabled="#{_bean.isTaskReadOnly()}">
-                    <p:ajax process="@this" listener="#{taskCardBean.onConsidInProcReportChange()}" oncomplete="itemChange = 1;"/>
+                    <p:ajax process="@this" listener="#{taskCardBean.onConsidInProcReportChange()}" update="infoConsidInProc" oncomplete="itemChange = 1;"/>
                 </p:selectBooleanCheckbox>
-        
+                
+                <h:panelGrid id="infoConsidInProc" columns="2" styleClass="without-spaces">
+                    <p:graphicImage value="/resources/icon/importance-32.png" rendered="#{!taskCardBean.editedItem.considInProcReport}"/> 
+                    <p:outputLabel  value="#{msg.ResultApprovalNotAffectProcess}" rendered="#{!taskCardBean.editedItem.considInProcReport}"/>
+                </h:panelGrid>
+                
                 <h:panelGrid columns="1" rendered="#{taskCardBean.editedItem.id != null and taskCardBean.editedItem.scheme != null}" >
                     <p:commandLink  value="#{bundle.GoToProcess}"
                                     rendered="#{taskCardBean.sourceBean == null}"
