мелкие косяки устранены

--- a/escom-bpm-web/src/main/webapp/view/processes/diagramma.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/diagramma.xhtml
@@ -40,13 +40,15 @@
                         fun: function () {
                             elementOpen();
                         }
-                    }, {
-                        name: '#{bundle.Copy}',
+                    }, 
+                    /* {
+                        name: 'Copy',
                         img: '/escom-bpm-web/resources/icon/copy.png',
                         fun: function () {
                             elementCopy();
                         }
-                    }, {
+                    },*/
+                    {
                         name: '#{bundle.Delete}',
                         img: '/escom-bpm-web/resources/images/delete.png',
                         fun: function () {
